<resources>
    <string name="app_name">Laboratorio_12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_fetching">Error al llamar al API</string>
    <string name="error_email_password">Correo o contraseña incorrecta</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="Nombre">Manuel Rodas</string>
    <string name="my_email">rod21509@uvg.edu.gt</string>
    <string name="button_text_01">MANTENER SESION ACTIVA</string>
    <string name="button_text_02">CERRAR SESION</string>
    <string name="button_text_03">DEFAULT</string>
    <string name="button_text_04">SUCCESS</string>
    <string name="button_text_05">FAILURE</string>
    <string name="button_text_06">EMPTY</string>
    <string name="intro">Seleccione una opcion</string>
    <string name="exito">¡Operacion exitosa!</string>
    <string name="falla">¡Operacion fallida!</string>
    <string name="no_resul">Sin resultados</string>

</resources>